                                   XXX 200X
#############################################################################
- NEW FEATURES
	* Simplified parameter input for ION and SMPBE keywords (key-value pairs) 
	* Examples and documentation for size-modified PBE code (Vincent Chu et al)
	* Added in "fast" compile-time option that uses optimized parameters for multigrid calculations
- BUG FIXES
	* Clarified ELEC/DIME and ELEC/PDIME documentation
	* Added more transparent warnings/error messages about path lengths which exceed the 80-character limit
	* Fixed small typo in user guide in installation instructions
	* Fixed memory leaks throughout the APBS code
	* Fixed NOsh_parseREAD errors for input files with \r line feeds.

#############################################################################
                                 VERSION 0.5.1 
                                   July 2007
#############################################################################
- NEW FEATURES
	* Replaced APOLAR->glen and APOLAR->dime keywords with APOLAR->grid
	* Deprecated mergedx. Added mergedx2
		- mergedx2 takes the bounding box that a user wishes to calculate a map for, as well as a resolution of the output map. An output map meeting those specifications is calculated and store.
	* Added pKa tutorial
	* Added warning about strange grid settings (MGparm)
	* Fixed a bug in vpmg.c that occured when a user supplied a dielectric map with the ionic strength set to zero, causing the map to not be used.
	* Removed deprecated (as of 0.5.0) tools/manip/acc in lieu of new APOLAR APBS features
	* Added enumerations for return codes, new PBE solver (SMPBE) and linear/ nonlinear types
	* Added in code for Size-Modified PBE (SMPBE)
- BUG FIXES
	* Fixed buffer over-run problem
	* Fixed case inconsistency with inputgen.py and psize.py scripts which caused problems with some versions of Python